--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
 	<artifactId>unm-android</artifactId>
 	<packaging>pom</packaging>
-	<version>0.0.9</version>
+	<version>0.0.1O-SNAPSHOT</version>
 	
 	<parent>
 		<groupId>fr.univmobile</groupId>
 		<artifactId>unm-parent</artifactId>
-		<version>0.0.5</version>
+		<version>0.0.6-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
