--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -32,7 +32,7 @@
             
         <meta-data
             android:name="jsonURL"
-            android:value="http://univmobile.vswip.com/unm-backend/json/" />
+            android:value="https://univmobile-dev.univ-paris1.fr/" />
         
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
@@ -69,7 +69,15 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name="org.unpidf.univmobile.view.ConnectionActivity">
+            android:name="org.unpidf.univmobile.view.ConnectionAccueilActivity">
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="org.unpidf.univmobile.view.ConnectionStandardActivity">
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="org.unpidf.univmobile.view.ConnectionShibbolethActivity">
         </activity>
     </application>
 
