--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -4,7 +4,8 @@
 		  android:versionCode="20"
 		  android:versionName="0.0.1">
 
-	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -31,7 +32,8 @@
 			android:value="https://univmobile-dev.univ-paris1.fr/"/>
 		<meta-data
 			android:name="com.google.android.maps.v2.API_KEY"
-			android:value="AIzaSyBJXfb49-xHsF-coLqLO6gtgRLR4oTv0QQ"/>
+			android:value="AIzaSyBxvbZg11hF0ISdvLCv-ZeuSvNYtFRQbw8"/>
+		<!-- android:value="AIzaSyBJXfb49-xHsF-coLqLO6gtgRLR4oTv0QQ"/> -->
 
 		<activity
 			android:name=".ui.activities.SplashScreenActivity"
