--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		  package="org.unpidf.univmobile"
-		  android:versionCode="20"
-		  android:versionName="0.0.1">
+		  android:versionCode="20">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -25,12 +24,6 @@
 			android:name="com.google.android.gms.version"
 			android:value="@integer/google_play_services_version"/>
 		<meta-data
-			android:name="appVersion"
-			android:value="0.1.1-SNAPSHOT"/>
-		<meta-data
-			android:name="jsonURL"
-			android:value="https://univmobile-dev.univ-paris1.fr/"/>
-		<meta-data
 			android:name="com.google.android.maps.v2.API_KEY"
 			android:value="AIzaSyBxvbZg11hF0ISdvLCv-ZeuSvNYtFRQbw8"/>
 		<!-- android:value="AIzaSyBJXfb49-xHsF-coLqLO6gtgRLR4oTv0QQ"/> -->
@@ -48,7 +41,7 @@
 		<activity
 			android:name=".ui.activities.HomeActivity"
 			android:screenOrientation="portrait"
-			android:windowSoftInputMode="stateHidden|adjustPan"></activity>
+			android:windowSoftInputMode="stateHidden|adjustPan"/>
 
 		<activity
 			android:name=".ui.activities.IntentFilterActivity"
