--- a/UnivMobile/build.gradle
+++ b/UnivMobile/build.gradle
@@ -85,4 +85,5 @@ dependencies {
     compile 'com.google.zxing:android-integration:3.2.0'
     compile 'com.squareup.picasso:picasso:2.3.3'
     compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.segment.analytics.android:analytics-integration-flurry:3.0.1'
 }
