--- a/UnivMobile/build.gradle
+++ b/UnivMobile/build.gradle
@@ -42,7 +42,7 @@ android {
         applicationId 'org.unpidf.univmobile'
         minSdkVersion 15
         targetSdkVersion 21
-        versionName = "0.5.15"
+        versionName = "0.5.17"
     }
 
     sourceSets {
@@ -95,6 +95,6 @@ dependencies {
     compile 'com.google.zxing:android-core:3.2.0'
     compile 'com.google.zxing:android-integration:3.2.0'
     compile 'com.squareup.picasso:picasso:2.3.3'
-    compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.crashlytics.android:crashlytics:1.+1.+'
     compile 'com.segment.analytics.android:analytics-integration-flurry:3.0.1'
 }
