--- a/UnivMobile/build.gradle
+++ b/UnivMobile/build.gradle
@@ -42,7 +42,7 @@ android {
         applicationId 'org.unpidf.univmobile'
         minSdkVersion 15
         targetSdkVersion 21
-        versionName = "0.5.17"
+        versionName = "0.5.18"
     }
 
     sourceSets {
@@ -87,7 +87,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:support-v4:22.0.0'
     compile 'org.apache.httpcomponents:httpmime:4.1.1'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
@@ -95,6 +95,6 @@ dependencies {
     compile 'com.google.zxing:android-core:3.2.0'
     compile 'com.google.zxing:android-integration:3.2.0'
     compile 'com.squareup.picasso:picasso:2.3.3'
-    compile 'com.crashlytics.android:crashlytics:1.+1.+'
+    compile 'com.crashlytics.android:crashlytics:1.+'
     compile 'com.segment.analytics.android:analytics-integration-flurry:3.0.1'
 }
