--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -18,6 +18,7 @@
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:name=".UnivMobileApp"
+        android:largeHeap="true"
 		android:theme="@style/AppTheme"
 		android:hardwareAccelerated="true">
 		<meta-data
