--- a/UnivMobile/build.gradle
+++ b/UnivMobile/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url 'http://download.crashlytics.com/maven' }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
-        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -18,11 +18,13 @@ allprojects {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'crashlytics'
+apply plugin: 'io.fabric'
 
 repositories {
-    maven { url 'http://download.crashlytics.com/maven' }
+    maven { url 'https://maven.fabric.io/public' }
 }
+
+
 
 android {
 
@@ -95,7 +97,9 @@ dependencies {
     compile 'com.google.zxing:android-core:3.2.0'
     compile 'com.google.zxing:android-integration:3.2.0'
     compile 'com.squareup.picasso:picasso:2.3.3'
-    compile 'com.crashlytics.android:crashlytics:1.+'
     compile 'com.segment.analytics.android:analytics-integration-flurry:3.0.1'
     compile 'com.google.maps.android:android-maps-utils:0.3+'
+    compile('com.crashlytics.sdk.android:crashlytics:2.4.0@aar') {
+        transitive = true;
+    }
 }
