--- a/UnivMobile/build.gradle
+++ b/UnivMobile/build.gradle
@@ -92,6 +92,7 @@ android {
 dependencies {
 
     compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.+'
     compile 'org.apache.httpcomponents:httpmime:4.1.1'
     compile 'com.google.android.gms:play-services:7.8.0'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
